# mysystemdown

./: .gitignore  Dockerfile  README.md  compose.yaml  db.sqlite3  pyproject.toml
config/: exceptions.py  exceptions_handler.py  settings.py  urls.py
docker/: entrypoint-api.sh  entrypoint-worker.sh
docs/: README.md
iam/: exceptions.py  models.py  urls.py  views.py
iam/authentication/: token_auth.py
iam/migrations/: 0001_initial.py
iam/permissions/: bot_permissions.py  request_permissions.py  service_permissions.py
iam/repositories/: membership_repository.py
iam/serializers/: login_serializer.py  membership_serializer.py  token_serializer.py
iam/services/: auth_service.py  membership_service.py
iam/views/: auth_view.py  login_view.py  membership_view.py  refreshtoken_view.py
services/: urls.py
services/migrations/: 0001_initial.py
services/repositories/: request_repository.py  service_repository.py
services/serializers/: request_serializer.py  service_serializer.py
services/services/: request_service.py  service_service.py
services/views/: request_view.py  service_view.py
src/config/: __init__.py  settings.py  urls.py
src/iam/: exceptions.py  models.py  urls.py
src/systems/: urls.py
src/tenants/: urls.py
systems/: exceptions.py  models.py  serializers.py  urls.py  views.py
systems/migrations/: 0001_initial.py  0002_alter_system_name.py  0003_bot.py  0004_bot_prefix_token.py
systems/repositories/: bot_repository.py  service_repository.py  (+1 more)
tests/: conftest.py
users/: models.py  serializers.py  urls.py  views.py
(+50 files in other folders)
